# mlpro-classification-bancaire-churn-2025

./: .gitignore  classification-bank.ipynb  classification.py  pyproject.toml  readme.md
app/: main.py
model/: main.py  model.pkl  scaler.pkl
