[project]
name = "mlpro-classification-bancaire-churn-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Nasser-Moud",email = "nassermoud17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
