[project]
name = "mlpro-classification-bancaire-churn-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Nasser-Moud",email = "nassermoud17@gmail.com"}


]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "pipeline (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
